--- a/app/views/todo_items/_form.html.erb
+++ b/app/views/todo_items/_form.html.erb
@@ -23,6 +23,9 @@
     <%= f.label :description %><br>
     <%= f.text_area :description %>
   </div>
+
+
+<!--conditional logic...-->
   <div class="field">
     <%= f.label :completed %><br>
     <%= f.check_box :completed %>
